fix: dark mode header styling

--- a/src/components/elements/TalkHeader/TalkHeader.module.css
+++ b/src/components/elements/TalkHeader/TalkHeader.module.css
@@ -2,3 +2,10 @@
   padding: 15px;
   @apply flex items-stretch bg-gray-100 rounded-t-lg;
 }
+
+@media (prefers-color-scheme: dark) {
+  .card__header {
+    background-color: #4b4b4b;
+    color: #ffffff;
+  }
+}
